fixed background sizes on mobile

--- a/itu_rover/static/css/base.css
+++ b/itu_rover/static/css/base.css
@@ -7,6 +7,7 @@ html{
     height: 100%;
 }
 body{
+    background-color: #DBDBDB;
     height: 100%;
     font-family: 'Ropa Sans', sans-serif;
 }
@@ -47,10 +48,11 @@ body{
 	transition-timing-function: ease-in-out;
 }
 
-.section{
+.section {
     width: 100%;
     height: 100%;
     position: relative;
+    overflow-x: hidden;
 }
 
 /*
@@ -68,6 +70,10 @@ body{
  */
 
 @media screen and (max-width: 968px) {
+    .bg_{
+        width: auto;
+        left: -100%;
+    }
     .up-down-z{
         display: none;
     }
